[gd_scene load_steps=9 format=2]

[ext_resource path="res://Images/Controls/menu.png" type="Texture" id=1]
[ext_resource path="res://Images/Controls/cont.png" type="Texture" id=2]
[ext_resource path="res://Images/Controls/rest.png" type="Texture" id=3]
[ext_resource path="res://UI/Dialog.gd" type="Script" id=4]
[ext_resource path="res://Images/Controls/text.png" type="Texture" id=5]
[ext_resource path="res://Images/coin.png" type="Texture" id=6]
[ext_resource path="res://Font/Montserrat-Bold.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_color = Color( 0.176471, 0.313726, 0.0862745, 1 )
use_filter = true
font_data = ExtResource( 7 )

[node name="Dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.529663
margin_top = -1.7818
margin_right = 0.529663
margin_bottom = -1.7818
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 423.999
margin_top = 241.635
margin_right = 857.999
margin_bottom = 476.635
color = Color( 0.176471, 0.313726, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ColorRect2"]
margin_left = 7.70264
margin_top = 7.76215
margin_right = 425.703
margin_bottom = 226.762
color = Color( 0.890196, 0.956863, 0.843137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="."]
margin_left = 717.266
margin_top = 256.425
margin_right = 844.266
margin_bottom = 306.425
texture_normal = ExtResource( 1 )

[node name="Cont" type="TextureButton" parent="."]
margin_left = 544.288
margin_top = 411.153
margin_right = 736.288
margin_bottom = 461.153
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rest" type="TextureButton" parent="."]
margin_left = 437.605
margin_top = 256.626
margin_right = 602.605
margin_bottom = 306.626
texture_normal = ExtResource( 3 )

[node name="text" type="Sprite" parent="."]
visible = false
position = Vector2( 643.937, 338.025 )
texture = ExtResource( 5 )

[node name="coin" type="Sprite" parent="."]
visible = false
position = Vector2( 583.487, 380.742 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="coin"]
margin_left = 115.858
margin_top = -62.1703
margin_right = 243.858
margin_bottom = 60.8297
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.176471, 0.313726, 0.0862745, 1 )
text = "coins: "
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Cont" to="." method="_on_Cont_pressed"]
[connection signal="pressed" from="Rest" to="." method="_on_Rest_pressed"]
